--- a/index.html
+++ b/index.html
@@ -1314,28 +1314,36 @@
 
         // NEW CODE for GitHub Pages:
         function loadData() {
-            showPopup('loadingPopup');
-
-            // Your web app URL with action parameter
-            const webAppUrl = 'https://script.google.com/macros/s/AKfycbyRDxqQzjp9C3jTRmrqTtGLOYpTvHuSFgobGTUNQcvGs0Mbqr1BVAsBUbfNzq7eLoFf6g/exec?action=getData';
-
-            fetch(webAppUrl)
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok');
-                    }
-                    return response.json();
-                })
-                .then(data => {
-                    hidePopup('loadingPopup');
-                    handleData(data);
-                })
-                .catch(error => {
-                    hidePopup('loadingPopup');
-                    console.error('Error loading data:', error);
-                    showMessage('Error', 'Failed to load data. Please try again.', 'error');
-                });
-        }
+  showPopup('loadingPopup');
+  
+  // Try web app
+  const webAppUrl = 'https://script.google.com/macros/s/AKfycby5d5y9Ffw2SrzhEM1OrvLAIg0UQ6zKnyyIJYoSXP02YRoaBQYDaijbPEMhjc1LdsCMyQ/exec?action=getData';
+  
+  fetch(webAppUrl)
+    .then(response => {
+      if (!response.ok) throw new Error('Web app failed');
+      return response.json();
+    })
+    .then(data => {
+      hidePopup('loadingPopup');
+      handleData(data);
+    })
+    .catch(error => {
+      console.log('Trying local fallback...');
+      // Fallback to local data
+      fetch('./data.json')
+        .then(r => r.json())
+        .then(data => {
+          hidePopup('loadingPopup');
+          handleData(data);
+          showMessage('Info', 'Using local backup data', 'info');
+        })
+        .catch(err => {
+          hidePopup('loadingPopup');
+          showMessage('Error', 'No data available', 'error');
+        });
+    });
+}
 
         // Optional: Fallback to local data
         function loadLocalFallback() {
@@ -1751,7 +1759,7 @@
         function deleteComponent(id) {
             showPopup('loadingPopup');
 
-            const webAppUrl = 'https://script.google.com/macros/s/AKfycbyRDxqQzjp9C3jTRmrqTtGLOYpTvHuSFgobGTUNQcvGs0Mbqr1BVAsBUbfNzq7eLoFf6g/exec';
+            const webAppUrl = 'https://script.google.com/macros/s/AKfycby5d5y9Ffw2SrzhEM1OrvLAIg0UQ6zKnyyIJYoSXP02YRoaBQYDaijbPEMhjc1LdsCMyQ/exec';
 
             fetch(webAppUrl, {
                 method: 'POST',
@@ -1797,7 +1805,7 @@
 
             showPopup('loadingPopup');
 
-            const webAppUrl = 'https://script.google.com/macros/s/AKfycbyRDxqQzjp9C3jTRmrqTtGLOYpTvHuSFgobGTUNQcvGs0Mbqr1BVAsBUbfNzq7eLoFf6g/exec';
+            const webAppUrl = 'https://script.google.com/macros/s/AKfycby5d5y9Ffw2SrzhEM1OrvLAIg0UQ6zKnyyIJYoSXP02YRoaBQYDaijbPEMhjc1LdsCMyQ/exec';
 
             fetch(webAppUrl, {
                 method: 'POST',
@@ -1825,7 +1833,7 @@
         function deleteComponent(id) {
             showPopup('loadingPopup');
 
-            const webAppUrl = 'https://script.google.com/macros/s/AKfycbyRDxqQzjp9C3jTRmrqTtGLOYpTvHuSFgobGTUNQcvGs0Mbqr1BVAsBUbfNzq7eLoFf6g/exec';
+            const webAppUrl = 'https://script.google.com/macros/s/AKfycby5d5y9Ffw2SrzhEM1OrvLAIg0UQ6zKnyyIJYoSXP02YRoaBQYDaijbPEMhjc1LdsCMyQ/exec';
 
             fetch(webAppUrl, {
                 method: 'POST',
